added then and catch method to mypromise.js

--- a/promise/package.json
+++ b/promise/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "jest": "^28.0.3"
+  },
+  "scripts": {
+    "test": "jest",
+    "watch": "jest --watch"
   }
 }
